2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* ExitCodeIsLimitedOnUnixRule.cs: Clearly specify [Serializable] on 
	the InspectionResult enum (self-test)

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Portability.mdp:
	* Gendarme.Rules.Portability.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>

	* MoMAWebService.cs:Remove #pragma (even if from generated code) 
	since I want to enable this across all rules.
	* MonoCompatibilityReviewRule.cs: Avoid specialization of Read and 
	Check methods parameters (self-test).

2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added support for generating the documentation files to
	the build process.

2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Portability.xml,
	doc/ns-MoMA.Analyzer.MoMAWebService.xml,
	doc/MoMA.Analyzer.MoMAWebService, doc/Gendarme.Rules.Portability: With
	the new code in the Makefiles we don't need to keep the documentation
	files in the repository.

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Add XML documentation. Use OpCodeEngine
	to avoid executing the rule unless an LDSTR instruction is present.
	* ExitCodeIsLimitedOnUnixRule.cs: Add XML documentation. Use 
	OpCodeEngine to avoid executing the rule unless Call[virt] 
	instructions are present inside the method.
	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Add XML documentation.
	Use OpCodeEngine to avoid executing the rule unless Call[virt] or 